[gd_scene load_steps=41 format=3 uid="uid://cuc5hf3xsgv8l"]

[ext_resource type="Script" uid="uid://dn46rx6to5sv6" path="res://Scripts/enemy.gd" id="1_4xtyq"]
[ext_resource type="PackedScene" uid="uid://bmw8yidy2pkfy" path="res://Scenes/health_component.tscn" id="2_mrghl"]
[ext_resource type="PackedScene" uid="uid://b4wi35uslgvco" path="res://Scenes/level_component.tscn" id="3_i8sm3"]
[ext_resource type="PackedScene" uid="uid://dup3y0fubjk2l" path="res://Scenes/hitbox_component.tscn" id="4_oe68b"]
[ext_resource type="PackedScene" uid="uid://bw6jr4thi22wr" path="res://Scenes/weapon_component.tscn" id="5_igki3"]
[ext_resource type="Texture2D" uid="uid://dduyn7l1ns3b3" path="res://Sprite/Enemy/BOSS/BlobRedBOSS.png" id="5_mrghl"]
[ext_resource type="Texture2D" uid="uid://cnw1xrmmmrxkq" path="res://Sprite/Enemy/BOSS/BlobRedBOSSAttack.png" id="6_igki3"]
[ext_resource type="PackedScene" uid="uid://bw4wnoo8lnda2" path="res://Scenes/sound_component.tscn" id="6_skn75"]
[ext_resource type="PackedScene" uid="uid://ey7itglm14ki" path="res://Scenes/attack_component.tscn" id="8_igki3"]
[ext_resource type="PackedScene" uid="uid://3s2tfpnwfsa7" path="res://Scenes/move_component.tscn" id="9_jn3iy"]
[ext_resource type="FontFile" uid="uid://c8fqvdvlp8x0h" path="res://Font/BetterPixels.ttf" id="11_i8sm3"]
[ext_resource type="Texture2D" uid="uid://bfe8wuthgkocq" path="res://Sprite/FX/Particle.png" id="11_oe68b"]
[ext_resource type="PackedScene" uid="uid://d2jwhtwlcwi3x" path="res://Scenes/dummy_health_component.tscn" id="12_igki3"]
[ext_resource type="AudioStream" uid="uid://d3jf4xn35ktd2" path="res://FX/aura.wav" id="12_oe68b"]
[ext_resource type="PackedScene" uid="uid://bqsxlramd7dtm" path="res://Scenes/state_machine.tscn" id="14_skn75"]
[ext_resource type="Texture2D" uid="uid://b1tdfdn2rwba2" path="res://FX/Visual/Godot-particle-and-vfx-textures-main/materials/rendered_textures/spotlight_1.png" id="15_vrctj"]
[ext_resource type="Texture2D" uid="uid://t5312t3ikqdo" path="res://FX/Visual/Godot-particle-and-vfx-textures-main/materials/rendered_textures/spotlight_3.png" id="16_my7j7"]
[ext_resource type="PackedScene" uid="uid://330xxfa0jutp" path="res://Scenes/attack_state.tscn" id="16_rpit6"]
[ext_resource type="PackedScene" uid="uid://cb6tyqfxwwt71" path="res://Scenes/idle_state.tscn" id="17_33vqk"]
[ext_resource type="PackedScene" uid="uid://cs54kf84qeh8v" path="res://Scenes/chase_state.tscn" id="19_rpit6"]
[ext_resource type="PackedScene" uid="uid://v7ew21ryo2r8" path="res://Scenes/patrol_state.tscn" id="20_33vqk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_auwsv"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0ikl"]
size = Vector2(10.6367, 10.6667)

[sub_resource type="Animation" id="Animation_287tu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_mrghl")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Flare:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.11)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Flare2:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.11)]
}

[sub_resource type="Animation" id="Animation_vrctj"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_igki3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.100523, 0.199821, 0.300344, 0.4, 0.501391, 0.601915, 0.699525, 0.799713, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 4, 5, 6, 7, 7, 6, 5, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Components/SoundComponent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 0.702355),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Lazer"],
"method": &"play_sound"
}, {
"args": ["Lazer"],
"method": &"play_sound"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6, 0.701314),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"start_attack"
}, {
"args": [],
"method": &"start_attack"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.7, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(0, 0), Vector2(3, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ghaa6"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.466667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 2, 3, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.202334, 0.30699, 0.402343, 0.509324, 0.600025, 1.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0.392157), Color(1, 1, 1, 1), Color(1, 0, 0, 0.392157), Color(1, 1, 1, 1), Color(1, 0, 0, 0.392157), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0830c"]
resource_name = "hurt"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.202334, 0.30699, 0.402343, 0.509324, 0.600025, 0.707007, 0.800034),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 0.392157), Color(1, 1, 1, 1), Color(1, 0, 0, 0.392157), Color(1, 1, 1, 1), Color(1, 0, 0, 0.392157), Color(1, 1, 1, 1), Color(1, 0, 0, 0.392157), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d148b"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.5, 1.55), Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.800781),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -0.515), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flare:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.11), Vector2(0.145, 0.159), Vector2(0.1, 0.11)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Flare2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.11), Vector2(0.145, 0.16), Vector2(0.1, 0.11)]
}

[sub_resource type="Animation" id="Animation_skn75"]
resource_name = "jump_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_mrghl")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Components/SoundComponent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Swing"],
"method": &"play_sound"
}, {
"args": ["Jump"],
"method": &"play_sound"
}]
}

[sub_resource type="Animation" id="Animation_afpow"]
resource_name = "jump_right"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_mrghl")]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Components/SoundComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Swing"],
"method": &"play_sound"
}, {
"args": ["Jump"],
"method": &"play_sound"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghaa6"]
_data = {
&"RESET": SubResource("Animation_287tu"),
&"attack": SubResource("Animation_vrctj"),
&"death": SubResource("Animation_ghaa6"),
&"hurt": SubResource("Animation_0830c"),
&"idle": SubResource("Animation_d148b"),
&"jump_left": SubResource("Animation_skn75"),
&"jump_right": SubResource("Animation_afpow")
}

[sub_resource type="LabelSettings" id="LabelSettings_oe68b"]
font = ExtResource("11_i8sm3")
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_jn3iy"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.392157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rpit6"]
gradient = SubResource("Gradient_jn3iy")

[sub_resource type="Gradient" id="Gradient_33vqk"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t68ge"]
gradient = SubResource("Gradient_33vqk")

[sub_resource type="Curve" id="Curve_8m4pr"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tejhk"]
texture_mode = 1
curve = SubResource("Curve_8m4pr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_igki3"]
lifetime_randomness = 0.39
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 6.355, 0)
emission_shape_scale = Vector3(16.635, -10, 1)
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 630.44
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
angle_min = -60.7
angle_max = 347.3
inherit_velocity_ratio = 0.435
spread = 127.957
gravity = Vector3(0, -125.735, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 58.89
scale_min = 0.0
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_t68ge")
color_initial_ramp = SubResource("GradientTexture1D_rpit6")
hue_variation_min = 0.02
hue_variation_max = 0.23
turbulence_enabled = true
turbulence_noise_strength = 6.56
turbulence_influence_over_life = SubResource("CurveTexture_tejhk")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_o442n"]
blend_mode = 1

[node name="BlobRedBOSS" type="CharacterBody2D" groups=["BOSS", "Enemy", "Entity", "Monster"]]
y_sort_enabled = true
collision_layer = 12
collision_mask = 115
script = ExtResource("1_4xtyq")

[node name="Components" type="Node2D" parent="."]

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("level_component") instance=ExtResource("2_mrghl")]
level_component = NodePath("../LevelComponent")
MAX_HEALTH = 1200.0

[node name="LevelComponent" parent="Components" instance=ExtResource("3_i8sm3")]
exp_reward = 150.0
lvl = 25
entity_name = "Blob King"

[node name="HitboxComponent" parent="Components" node_paths=PackedStringArray("health_component") instance=ExtResource("4_oe68b")]
visible = false
disable_mode = 2
collision_layer = 12
collision_mask = 115
health_component = NodePath("../HealthComponent")
knockback_resistance = 0.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/HitboxComponent"]
visible = false
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_auwsv")

[node name="WeaponComponent" parent="Components" instance=ExtResource("5_igki3")]
attack_damage = 25.0
min_attack_cooldown = 3.0
max_attack_cooldown = 4.0

[node name="SoundComponent" parent="Components" instance=ExtResource("6_skn75")]

[node name="DummyHealthComponent" parent="Components" instance=ExtResource("12_igki3")]

[node name="AttackComponent" parent="Components" instance=ExtResource("8_igki3")]

[node name="MoveComponent" parent="Components" instance=ExtResource("9_jn3iy")]

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(8.0225, 8)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_r0ikl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_ghaa6")
}
speed_scale = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(-4, -8)
scale = Vector2(1.5, 1.50116)
texture = ExtResource("5_mrghl")
centered = false
hframes = 6

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2(8, 0)
target_position = Vector2(0, 16)
collision_mask = 119
collide_with_areas = true

[node name="Label" type="Label" parent="."]
z_index = 1
y_sort_enabled = true
offset_left = -0.195
offset_top = -10.4
offset_right = 55.805
offset_bottom = 15.6
scale = Vector2(0.205, 0.205)
text = "BOSS"
label_settings = SubResource("LabelSettings_oe68b")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
process_mode = 3
modulate = Color(1, 1, 1, 0.282353)
y_sort_enabled = true
position = Vector2(8, 8)
amount = 16
texture = ExtResource("11_oe68b")
process_material = SubResource("ParticleProcessMaterial_igki3")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 2
stream = ExtResource("12_oe68b")
volume_db = -0.39
autoplay = true
max_distance = 766.0

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("14_skn75")]
initial_state = NodePath("IdleState")

[node name="AttackState" parent="StateMachine" node_paths=PackedStringArray("idle_state") instance=ExtResource("16_rpit6")]
idle_state = NodePath("../IdleState")

[node name="IdleState" parent="StateMachine" node_paths=PackedStringArray("attack_state", "patrol_state") instance=ExtResource("17_33vqk")]
attack_state = NodePath("../AttackState")
patrol_state = NodePath("../PatrolState")

[node name="PatrolState" parent="StateMachine" node_paths=PackedStringArray("idle_state") instance=ExtResource("20_33vqk")]
idle_state = NodePath("../IdleState")

[node name="ChaseState" parent="StateMachine" node_paths=PackedStringArray("attack_state", "patrol_state") instance=ExtResource("19_rpit6")]
attack_state = NodePath("../AttackState")
patrol_state = NodePath("../PatrolState")

[node name="Flare" type="Sprite2D" parent="."]
process_mode = 3
modulate = Color(1, 0, 0, 1)
y_sort_enabled = true
texture_filter = 1
material = SubResource("CanvasItemMaterial_o442n")
position = Vector2(7.54, 5.54)
scale = Vector2(0.1, 0.11)
texture = ExtResource("15_vrctj")

[node name="Flare2" type="Sprite2D" parent="."]
process_mode = 3
modulate = Color(1, 0, 0, 1)
y_sort_enabled = true
texture_filter = 1
material = SubResource("CanvasItemMaterial_o442n")
position = Vector2(7.54, 5.54)
scale = Vector2(0.1, 0.11)
texture = ExtResource("16_my7j7")
